# game-of-life

./: CMakeLists.txt  build.sh  buildfast.sh  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
src/: main.cpp  main_octree.cpp
